--- a/HashShop.Api/HashShop.Api.csproj
+++ b/HashShop.Api/HashShop.Api.csproj
@@ -12,7 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HashShop.Dto\HashShop.Dto.csproj" />
+    <ProjectReference Include="..\HashShop.Infrastructure\HashShop.Infrastructure.csproj" />
     <ProjectReference Include="..\HashShop.Models\HashShop.Models.csproj" />
+    <ProjectReference Include="..\HashShop.Service\HashShop.Service.csproj" />
   </ItemGroup>
 
 
