--- a/HashShop.Test/HashShop.Test.csproj
+++ b/HashShop.Test/HashShop.Test.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HashShop.Api\HashShop.Api.csproj" />
+  </ItemGroup>
+
 </Project>
