Refatoração no código

--- a/HashShop.Infrastructure/HashShop.Infrastructure.csproj
+++ b/HashShop.Infrastructure/HashShop.Infrastructure.csproj
@@ -23,7 +23,7 @@
 	</ItemGroup>            
 
   <ItemGroup>
-    <None Update="products.json">
+    <None Update="Database\products.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
