Criação de environment variables para guardar configurações. Alterações nos testes e correção de erro encontrado no preenchimento da resposta

--- a/HashShop.Repository/HashShop.Repository.csproj
+++ b/HashShop.Repository/HashShop.Repository.csproj
@@ -29,5 +29,9 @@
       <GrpcServices>Client</GrpcServices>
     </None>
   </ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Config\" />
+	</ItemGroup>
 
 </Project>
