--- a/HashShop.Api/Properties/launchSettings.json
+++ b/HashShop.Api/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:4273",
-      "sslPort": 44304
+      "applicationUrl": "http://localhost:8080"
     }
   },
   "profiles": {
@@ -24,14 +23,7 @@
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         },
-        "applicationUrl": "https://localhost:5001;http://localhost:5000"
-    },
-    "Docker": {
-        "commandName": "Docker",
-        "launchBrowser": true,
-        "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-        "publishAllPorts": true,
-        "useSSL": true
+        "applicationUrl": "http://localhost:8080"
     }
   }
 }
